# multistore

./: .gitignore  Cargo.toml  LICENSE  README.md  database.example.yaml  database.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
axum-api/: Cargo.toml
axum-api/src/: server.rs  utils.rs
cf-workers-api/: Cargo.toml  wrangler.toml
cf-workers-api/src/: lib.rs
crates/cf-workers-api/: Cargo.toml
crates/cf-workers-api/src/: lib.rs
crates/hyper-api/: Cargo.toml
crates/hyper-api/src/: main.rs
crates/lambda-api/: Cargo.toml
crates/lambda-api/src/: main.rs
crates/multistore/src/: data_source.rs  s3.rs
crates/multistore/src/credentials/: static_auth.rs
crates/multistore/src/data_source/: static_db.rs
examples/cf-workers-api/: Cargo.toml  README.md  wrangler.toml
examples/cf-workers-api/src/: fetch.rs  lib.rs  stream.rs  wasm.rs
examples/hyper-api/: Cargo.toml
examples/hyper-api/src/: main.rs  server.rs  utils.rs
examples/lambda-api/: Cargo.toml  README.md
examples/lambda-api/src/: main.rs  utils.rs
hyper-api/: Cargo.toml
hyper-api/src/: main.rs
lambda-api/: Cargo.toml  README.md
lambda-api/src/: main.rs  utils.rs
lib/: Cargo.toml
lib/src/: conversion.rs  credentials.rs  data_source.rs  error.rs  lib.rs  s3.rs
lib/src/credentials/: yaml_auth.rs
lib/src/data_source/: static_db.rs  yaml_db.rs
multistore/: Cargo.toml
multistore/src/: conversion.rs  credentials.rs  data_source.rs  error.rs  s3.rs  stream.rs
multistore/src/credentials/: in_memory.rs
multistore/src/data_source/: in_memory.rs
src/: auth.rs  conversion.rs  data_source.rs  database.rs  error.rs  main.rs  s3.rs  server.rs
src/auth/: yaml_auth.rs
src/data_source/: yaml_db.rs
