[package]
edition = "2024"
name = "s3s-objectstore"
version = "0.1.0"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
const-str = "0.6.2"
futures-util = "0.3.31"
hyper-util = {version = "0.1.10", features = ["server-auto", "server-graceful", "http1", "http2", "tokio"]}
log = "0.4.27"
object_store = {version = "0.12.0", features = ["aws"]}
s3s = "0.11.0"
s3s-fs = "0.11.0"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
time = "0.3.41"
tokio = {version = "1.44.1", features = ["rt-multi-thread", "fs", "io-util", "signal"]}
tokio-util = {version = "0.7.14", features = ["io"]}
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
url = "2.5.4"
