[package]
name = "cf-workers-api"
version = "0.1.0"
edition = "2021"
authors = [ "Anthony Lukach <anthonylukach@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
lib = { version = "0.1.0", path = "../lib" }
s3s = { version = "0.11.0" }
getrandom = { version = "0.2", features = ["js"] }  # NOTE: Need js feature to not fail build
