[package]
name = "lambda-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
lib = { path = "../lib" }
s3s = "0.11.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
lazy_static = "1.4.0"
hyper = { version = "1.3.1", features = ["full", "http1", "http2", "server"] }
hyper-util = { version = "0.1.11", features = ["server-auto", "http1", "http2", "tokio"] }
tower = "0.4.13"
futures = "0.3.31"
tokio-util = "0.7.15"
http-body-util = "0.1.3"
