[package]
edition = "2024"
name = "lib"
version = "0.1.0"

[dependencies]
async-trait = "0.1.88"
futures-util = "0.3.31"
bytes = "1.5.0"
object_store = {version = "0.12.0", features = ["aws"]}
s3s = "0.11.0"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
time = "0.3.41"
tracing = "0.1.41"
tracing-error = "0.2.1"
url = "2.5.4"
chrono = "0.4.41"

[dev-dependencies]
tokio = {version = "1.36", features = ["full"]}
