[package]
name = "multistore"
version = "0.1.0"
edition = "2024"
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]
description = "S3-compliant API for one-or-many object store backends"
license = "MIT"
repository = "https://github.com/alukach/multistore"
homepage = "https://github.com/alukach/multistore"
documentation = "https://docs.rs/multistore"
readme = "../README.md"
keywords = ["s3", "object-store", "storage", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
futures-util = "0.3.31"
object_store = {version = "0.12.2", features = ["aws"], default-features = false}
s3s = {version = "0.12.0-dev"}
serde_yaml = "0.9.34"
thiserror = "2.0.12"
time = "0.3.41"
tracing = "0.1.41"
tracing-error = "0.2.1"
url = "2.5.4"

[dev-dependencies]
tokio = {version = "1.36", features = []}
