[package]
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]
edition = "2021"
name = "cf-workers-api"
version = "0.1.0"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
multistore = {path = "../multistore", features = ["wasm"]}

console_error_panic_hook = {version = "0.1.7"}
http = "1.1"
s3s = {version = "*", git = "https://github.com/alukach/s3s-wasm.git", branch = "main", package = "s3s"}
serde_yaml = "0.9.34"
worker = {version = "0.5.0", features = ["http"]}
worker-macros = {version = "0.5.0", features = ["http"]}

[dependencies.getrandom_v03]
features = ["wasm_js"]
package = "getrandom"
version = "0.3"

[dependencies.getrandom_v02]
features = ["js"]
package = "getrandom"
version = "0.2"
