[package]
edition = "2024"
name = "hyper-api"
version = "0.1.0"

[dependencies]
hyper-util = {version = "0.1.11", features = ["server-auto", "server-graceful", "http1", "http2", "tokio"]}
multistore = {path = "../../multistore", default-features = false}
s3s = {version = "0.12.0-dev"}
tokio = {version = "1.45.1", features = ["rt-multi-thread", "fs", "io-util", "signal"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
